# Rainbow-Table-Attack

./: Cargo.toml  README.md  attack.rs
data/: RainbowTable_1_0_30_5.json  RainbowTable_1_1_30_5.json  RainbowTable_1_25_15.json  RainbowTable_1_25_7.json  RainbowTable_1_2_30_5.json  RainbowTable_1_36_22.json  RainbowTable_1_3_30_5.json  RainbowTable_2_0_477_9.json  RainbowTable_2_1000_33.json  RainbowTable_2_100_33.json  RainbowTable_2_100_50.json  RainbowTable_2_101_33.json  RainbowTable_2_101_50.json  RainbowTable_2_1200_250.json  RainbowTable_2_130_30.json  RainbowTable_2_150_220.json  RainbowTable_2_1_477_9.json  RainbowTable_2_200_100.json  RainbowTable_2_200_50.json  RainbowTable_2_2_477_9.json  RainbowTable_2_3_477_9.json  RainbowTable_2_440_8.json  RainbowTable_2_477_9.json  RainbowTable_2_480_220.json  RainbowTable_2_480_250.json  RainbowTable_2_480_300.json  RainbowTable_2_500_33.json  RainbowTable_2_509_10.json  RainbowTable_2_551_11.json  RainbowTable_2_60_160.json  RainbowTable_2_800_250.json  RainbowTable_3_1000_250.json  RainbowTable_3_1000_300.json  RainbowTable_3_100_600.json  RainbowTable_3_1200_250.json  RainbowTable_3_1500_250.json  RainbowTable_3_1560_220.json  RainbowTable_3_1600_300.json  RainbowTable_3_1_3444_68.json  RainbowTable_3_2000_200.json  (+28 more)
data/test/: RainbowTable_Test.json
src/: attack.rs  constants.rs  file.rs  interface.rs  lib.rs  main.rs  para.rs  parallelization.rs  performance.rs  rainbow_table.rs  rainbowtable.rs  reduction.rs  sha3.rs  test.rs  tests.rs  verif.rs
