[package]
name = "rainbow_table_attack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.10.6"
colored = "2"
random-string = "1.0.0"
serde_json = "1.0.96"
serde = { version = "1.0.104", features = ["derive"] }
