[package]
name = "rainbow_table_attack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.10.6"
colored = "2"
random-string = "1.0.0"
serde_json = "1.0.96"
serde = { version = "1.0.104", features = ["derive"] }
structopt = "0.3.26"
indicatif = "0.17.3"
console = "0.15.5"
num_cpus = "1.15.0"
threadpool = "1.8.1"
rayon = "1.7.0"
ansi_term = "0.12.1"
lazy_static = "1.4.0"